--- a/.eslintrc
+++ b/.eslintrc
@@ -1,31 +1,32 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "plugin:tailwindcss/recommended"
-  ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
-  "rules": {
-    "@next/next/no-html-link-for-pages": "off",
-    "tailwindcss/no-custom-classname": "off",
-    "tailwindcss/classnames-order": "error"
-  },
-  "settings": {
-    "tailwindcss": {
-      "callees": ["cn", "cva"],
-      "config": "tailwind.config.js"
+    "extends": [
+        "next/core-web-vitals",
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
+        "plugin:tailwindcss/recommended"
+    ],
+    "parserOptions": {
+        "project": "./tsconfig.json"
     },
-    "next": {
-      "rootDir": ["src/*/"]
-    }
-  },
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx"],
-      "parser": "@typescript-eslint/parser"
-    }
-  ]
+    "rules": {
+        "@next/next/no-html-link-for-pages": "off",
+        "tailwindcss/no-custom-classname": "off",
+        "tailwindcss/classnames-order": "error",
+        "indent": ["warn", 2]
+    },
+    "settings": {
+        "tailwindcss": {
+            "callees": ["cn", "cva"],
+            "config": "tailwind.config.js"
+        },
+        "next": {
+            "rootDir": ["src/*/"]
+        }
+    },
+    "overrides": [
+        {
+            "files": ["*.ts", "*.tsx"],
+            "parser": "@typescript-eslint/parser"
+        }
+    ]
 }
