--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "rest-dashboard",
   "version": "0.1.0",
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
